<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <ScrollView
        android:layout_width="395dp"
        android:layout_height="255dp"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/homeSearchButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_busqueda" />

            <Button
                android:id="@+id/homeSuggestionsButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_sugerencias" />

            <Button
                android:id="@+id/homeMySuggestionsButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_miSugerencias" />

            <Button
                android:id="@+id/homeRateShopsButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_valorar" />

            <Button
                android:id="@+id/homeLogOutButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_logout" />


        </LinearLayout>
    </ScrollView>


</FrameLayout>