<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IndexFragment"
    >

    <LinearLayout
        android:layout_width="383dp"
        android:layout_height="517dp"
        android:orientation="vertical"
        android:layout_gravity="center">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="256dp"
            android:layout_height="244dp"
            android:layout_gravity="center|top"
            android:src="@drawable/imagenhome" />

        <Space
            android:id="@+id/idEspacio1"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            />

        <Button
            android:id="@+id/indexSearchButton"
            android:layout_width="340dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:text="@string/menu_busqueda" />

        <Button
            android:id="@+id/indexSignInButton"
            android:layout_width="340dp"
            android:layout_height="60dp"
            android:text="@string/menu_registrar"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/indexLogInButton"
            android:layout_width="340dp"
            android:layout_height="60dp"
            android:text="@string/menu_acced"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/indexAboutUsButton"
            android:layout_width="340dp"
            android:layout_height="60dp"
            android:text="@string/menu_aboutus"
            android:layout_gravity="center"/>

    </LinearLayout>

</FrameLayout>